--- a/src/Sections/About/about.module.css
+++ b/src/Sections/About/about.module.css
@@ -1,6 +1,10 @@
 .container {
   background-color: #ff7075;
-  height: 100vh;
-  width: 100vw;
-  scroll-snap-align: start;
+}
+.paragraph {
+  font-size: 42px;
+  font-family: "Space Mono", monospace;
+  opacity: 0.7;
+  padding-right: 20px;
+  font-weight: 600;
 }
