--- a/src/Sections/Hero/hero.module.css
+++ b/src/Sections/Hero/hero.module.css
@@ -1,12 +1,45 @@
 .container {
-  background-color: #5ce1e6;
-  height: 100vh;
-  width: 100vw;
-  scroll-snap-align: start;
+  box-sizing: border-box;
+  padding: 60px;
+  display: flex;
+  background-image: radial-gradient(#70e3e9 20px, #5ce1e6 2px);
+  background-size: 140px 140px;
 }
 
-.heading {
-  color: white;
+.logo {
   margin: 0;
   padding: 0;
+  font-size: 32px;
+}
+.leftContainer {
+  width: 50%;
+  flex-direction: column;
+  align-items: flex-start;
+  justify-content: center;
+}
+.rightContainer {
+  width: 50%;
+  margin-bottom: 60px;
+}
+.headingContainer {
+  flex-grow: 1;
+  display: flex;
+  align-items: center;
+}
+
+.imageContainer {
+  height: 440px;
+  width: 440px;
+  background-color: #ffde59;
+  border: 14px solid white;
+  overflow: hidden;
+}
+
+.fromText {
+  font-weight: 300;
+  opacity: 0.8;
+}
+
+.indiaText {
+  color: #ffde59;
 }
